--- a/src/components/home.css
+++ b/src/components/home.css
@@ -1,14 +1,12 @@
-/* General Reset */
-
 html, body {
-  background-color: #0d0d0d; /* Dark background color */
+  background-color: #001f3f; /* dark blue background color */
   width: 100%;
   height: 100%;
   margin: 0;
   padding: 0;
   scroll-behavior: smooth;
-  font-family: 'Proximo';
 }
+
 
 /* Connecting dots canvas - position it behind everything */
 .connecting-dots {
@@ -50,22 +48,12 @@ html, body {
   padding: 20px;
 }
 
-
-
-
-.heading__line-1 {
-  font-size: 4rem;
-  font-weight: 600;
-  color: white;
-  margin: 0;
-  line-height: 1.2;
-}
-
 .heading__line-2 {
-  font-size: 1.8rem;
+  font-size: 1.5rem;
   font-weight: 400;
   color: #f2f2f2;
   margin-top: 10px;
+  font-family: 'Proximo';
 }
 
 .highlight {
