--- a/src/components/about.css
+++ b/src/components/about.css
@@ -51,3 +51,74 @@
   border-radius: 10px;
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
 }
+
+.about-section {
+  padding: 20px;
+  background-color: #1d1d1d; /* Dark background */
+  color: #ffffff;
+}
+
+.title, .tools-title {
+  text-align: center;
+  color: #f2efea;
+  margin-bottom: 20px;
+}
+
+.about-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.skills-image-container {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.skills-image {
+  width: 150px;
+  border-radius: 50%;
+}
+
+.about-description {
+  text-align: center;
+  max-width: 600px;
+}
+
+.tools-section {
+  margin-top: 30px;
+}
+
+.skills-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+  justify-items: center;
+}
+
+.skill-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: #2d2d2d;
+  padding: 10px;
+  border: 2px solid #f2efea; /* Border around each card */
+  border-radius: 10px;
+  transition: transform 0.3s ease;
+}
+
+.skill-card:hover {
+  transform: scale(1.05);
+}
+
+.skill-card img {
+  width: 60px;
+  height: 60px;
+  margin-bottom: 10px;
+}
+
+.skill-card span {
+  font-size: 16px;
+  color: #f2efea;
+  font-weight: bold;
+}
